# trading-platform

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  db-migrate.yml  pr-checks.yml  release.yml  scheduled.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
deploy/kubernetes/: api.yaml  bridge.yaml  config.yaml  ingress.yaml  namespace.yaml
deploy/server/: .env.example  docker-compose.prod.yml  setup.sh
docker/: backend.Dockerfile  docker-compose.yml
docs/: DEPLOYMENT.md
monitoring/: nginx.conf  prometheus.yml
mql5/: BridgeEA.mq5
mql5/websocket/: README.md  atlas_bridge.cpp
scripts/: backup_db.sh  dr_drill.sh  restore_db.sh
src/platform/: __init__.py  main.py
src/platform/ai/: orchestrator.py
src/platform/ai/modules/: anomaly_detection.py  economic_calendar.py  llm_assistant.py  pattern.py  portfolio.py  position_size.py  sentiment.py  strategy_generator.py  trade_journal.py  trade_quality.py  volatility.py
src/platform/api/v1/: admin.py  ai.py  analytics.py  auth.py  market_data.py  orders.py  risk.py  strategies.py  terminals.py
src/platform/api/ws/: terminal_events.py  ticks.py
src/platform/application/commands/: __init__.py  activate_strategy.py  cancel_order.py  close_position.py  create_strategy.py  create_user.py  engage_kill_switch.py  flatten_all.py  modify_position.py  place_order.py  register_strategy.py  register_terminal.py  run_backtest.py  subscribe_ticks.py  sync_account.py  sync_positions.py  sync_terminal.py
src/platform/application/queries/: __init__.py  get_ai_analysis.py  get_performance.py  get_terminal_detail.py  list_orders.py  list_positions.py  list_risk_events.py  list_signals.py  list_strategies.py  list_terminals.py  list_trades.py
src/platform/backtest/: __init__.py  engine.py  metrics.py  optimizer.py  report.py
src/platform/bridge/: handlers.py  server.py  session.py
src/platform/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py  telemetry.py
src/platform/db/: base.py  session.py
src/platform/db/models/: __init__.py
src/platform/domain/ai/: __init__.py
src/platform/domain/identity/: __init__.py
src/platform/domain/market_data/: __init__.py
src/platform/domain/risk/: __init__.py
src/platform/domain/shared/: __init__.py
src/platform/domain/strategy/: __init__.py
src/platform/domain/trading/: __init__.py
src/platform/events/: bus.py  topics.py
src/platform/infrastructure/: celery_app.py  celery_schedules.py  tasks.py
src/platform/infrastructure/execution/: __init__.py  adapter_base.py  paper_broker.py  registry.py
src/platform/infrastructure/mt5_bridge/: client.py  command_queue.py  protocol.py  registry.py
src/platform/infrastructure/repositories/: __init__.py  account_repository.py  ai_result_repository.py  api_key_repository.py  audit_repository.py  backtest_repository.py  market_data_repository.py  order_repository.py  position_repository.py  risk_event_repository.py  signal_repository.py  strategy_repository.py  terminal_repository.py  trade_repository.py  user_repository.py
src/platform/market_data/: engine.py  ohlc_service.py  replay_engine.py  symbol_service.py  tick_store.py
src/platform/notifications/: base.py
src/platform/notifications/channels/: discord.py  email.py  telegram.py  webhook.py
src/platform/observability/: checks.py  health.py  metrics.py  readiness.py
src/platform/plugins/: loader.py  sandbox.py
src/platform/risk/: engine.py
src/platform/risk/rules/: __init__.py  correlation_risk.py  kelly_sizing.py  max_exposure.py  news_lock.py  position_limit.py  sector_exposure.py  spread_protection.py  volatility_lock.py
src/platform/strategies/builtin/: breakout.py  ema_cross.py  grid.py  liquidity_sweep.py  macd_divergence.py  news_overlay.py  rsi_reversion.py  smc_order_blocks.py
src/platform/strategies/sdk/: __init__.py
tests/: conftest.py
tests/integration/: .gitkeep  test_dummy.py
tests/unit/: test_ai_domain.py  test_anomaly_detection_ai.py  test_backtest_metrics.py  test_breakout_strategy.py  test_bridge_protocol.py  test_ema_strategy.py  test_event_bus.py  test_grid_strategy.py  test_health_checker.py  test_identity_domain.py  test_market_data_domain.py  test_notification_dispatcher.py  test_order_aggregate.py  test_paper_broker.py  test_pattern_ai.py  test_position_aggregate.py  test_position_size_ai.py  test_risk_domain.py  test_risk_engine.py  test_risk_rules.py  test_rsi_strategy.py  test_security.py  test_strategy_aggregate.py  test_strategy_sandbox.py
